; ModuleID = '/home/carl/AnghaBench/systemd/src/timesync/extr_timesyncd-manager.c_ntp_ts_short_to_d.c'
source_filename = "/home/carl/AnghaBench/systemd/src/timesync/extr_timesyncd-manager.c_ntp_ts_short_to_d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ntp_ts_short = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (%struct.ntp_ts_short*)* @ntp_ts_short_to_d to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @ntp_ts_short_to_d(%struct.ntp_ts_short* %0) #0 {
  %2 = alloca %struct.ntp_ts_short*, align 8
  store %struct.ntp_ts_short* %0, %struct.ntp_ts_short** %2, align 8
  %3 = load %struct.ntp_ts_short*, %struct.ntp_ts_short** %2, align 8
  %4 = getelementptr inbounds %struct.ntp_ts_short, %struct.ntp_ts_short* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call double @be16toh(i32 %5)
  %7 = load %struct.ntp_ts_short*, %struct.ntp_ts_short** %2, align 8
  %8 = getelementptr inbounds %struct.ntp_ts_short, %struct.ntp_ts_short* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call double @be16toh(i32 %9)
  %11 = fdiv double %10, 6.553600e+04
  %12 = fadd double %6, %11
  ret double %12
}

declare dso_local double @be16toh(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
